app/styles/main.css
/**
 * Copyright 2015 Google Inc. All Rights Reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

/*
Note: any .css or .scss files included in the 'styles' directory
will be correctly compiled during `gulp serve` and `gulp`
 */

html, body {
  font-family: 'Roboto', 'Helvetica', sans-serif;
  margin: 0;
  padding: 0;
}

#map {
  height: calc(100vh - 110px);
}

/* Filterbox */

.mdl-filterbox {
  display: flex;
  flex-flow: row wrap;
  padding: 12px 12px;
}

.mdl-filterbox .mdl-filterbox__input {
  border: none;
  outline: none;
  /* icon 24px + 8px = 32px */
  width: calc(100% - 32px);
}

.mdl-filterbox .mdl-filterbox__icon {
  margin-right: 8px;
  outline: none;
}

#filterbox {
  position: absolute;
  left: 1%;
  right: 1%;
  top: 1%;
}

/* Venue Cards */

#venues-cards {
  height: 110px;
}

.mdl-venue-card {
  width: 150px;
  padding: 8px !important;
}

.mdl-venue-card .mdl-venue-card__title {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
}

.mdl-venue-card .mdl-venue-card__category{
  margin: 0;
}

/* Venue Details */

#venue-details {
  border-radius: 0;
  width: 100%;
}

#venue-details .venue-details__media {
  height: 200px;
}

#venue-details__header {
  flex-flow: row wrap;
}

#venue-details__header--title {
  flex:  1 0 100%;
}

#venue-details__header--rating {
  align-items: center;
  display: flex;
  flex-flow: row wrap;
  flex:  1 0 100%;
}

#venue-details__header--rating-number {
  margin-right: 8px;
}

#venue-details footer {
  background-color: white;
  position: absolute;
  right: 0;
  bottom: 0;
}

#venue-details footer img {
  width: 150px;
  height: auto;
}

.mdl-card .mdl-card--border {
  border-top: 1px solid rgba(0,0,0,.1)
}

#venue-details .venue-details__supporting-information {
  width: 100%;
}

#venue-details .venue-details__supporting-information .venue-details__supporting-information--text {
  color: rgba(0,0,0,.87);
}

#venue-details .venue-details__supporting-information .venue-details__supporting-information--icon {
  margin-right: 8px;
}

#venue-details__header--category {
  flex:  1 0 100%;
}

#venue-details__header > *:not(:first-child) {
  margin-top: 8px;
}

#venue-details__actions {
  justify-content: space-around;
  display: flex;
  flex-flow: row wrap;
}

/* Error */

.error {
  display: flex;
}

.error__text {
  text-align: center;
  margin: auto;
}

